--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>hello coursera fuck</title>
+</head>
+<body>
+<h1>hello coursera fuck</h1>
+</body>
+</html>
