--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera fuck</title>
-</head>
 <body>
-<h1>hello coursera fuck</h1>
+<div class=”itemContent”>
+
+<span class="title ng-binding" ng-bind="food.name">Apple butter</span>
+<span class="description ng-binding" ng-bind="food._servingDesc">1 Tbsp</span>
+
+<span class="title ng-binding" ng-bind="food.name">Apple(s) fresh</span>
+<span class="description ng-binding" ng-bind="food._servingDesc">1 medium</span>
+
+<span class="title ng-binding" ng-bind="food.name">Applesauce, unsweetened </span>
+<span class="description ng-binding" ng-bind="food._servingDesc">1/2 cup(s)</span>
+
+<span class="title ng-binding" ng-bind="food.name">Apple(s), dried</span>
+<span class="description ng-binding" ng-bind="food._servingDesc">1/4 cup(s)</span>
+
+<span class="title ng-binding" ng-bind="food.name">Juice, Cranberry-apple drink</span>
+<span class="description ng-binding" ng-bind="food._servingDesc">8 fl oz</span>
+
+</div>
 </body>
+</head>
 </html>
